Fixed alignment

--- a/src/mercator/mercator/static/stylesheets/scss/components/_rate_theme.scss
+++ b/src/mercator/mercator/static/stylesheets/scss/components/_rate_theme.scss
@@ -1,6 +1,7 @@
 .like {
     &.is-disabled {
         @extend .icon-pointy-rectangle-left;
+        margin-top: 0;
 
         .like-button {
             display: none;
